# rewinder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rewinder.toml.example
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.yml  rewinder-mount.service  rewinder.service
migrations/: 001_initial.sql  002_add_permanent_media.sql  003_poster_path.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  templates.rs  tmdb.rs
src/auth/: middleware.rs  mod.rs  session.rs
src/models/: mark.rs  media.rs  mod.rs  persistent.rs  user.rs
src/persistent/: mod.rs
src/routes/: admin.rs  auth.rs  mod.rs  movies.rs  sort.rs  tv.rs
src/scanner/: mod.rs
src/trash/: mod.rs
src/watcher/: mod.rs
static/: style.css
templates/: base.html  login.html  movies.html  setup_password.html  tv.html
templates/admin/: dashboard.html  trash.html  users.html
templates/partials/: media_card.html  media_row.html  nav.html  toast.html
tests/: admin_tests.rs  auth_tests.rs  movies_tests.rs  persistent_tests.rs  trash_tests.rs  tv_tests.rs
tests/common/: mod.rs
tests/fixtures/: README.md  generate_media_fixtures.sh
